--- a/.github/workflows/test-a.yml
+++ b/.github/workflows/test-a.yml
@@ -12,12 +12,6 @@ on:
 jobs:
   say-things-a:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        include:
-          - message: thing 1
-          - message: thing 2
-
     steps:
       - uses: actions/checkout@v4
-      - run: echo ${{ matrix.message }}
+      - run: echo 'hi'
