--- a/.github/workflows/test-b.yml
+++ b/.github/workflows/test-b.yml
@@ -21,7 +21,10 @@ jobs:
   say-things-b:
     if: |
       (
-        github.event_name == 'workflow_run'
+        github.ref == 'refs/heads/main'
+          && github.event.workflow_run.conclusion == 'success'
+      ) || (
+        github.event.workflow_run.event == 'pull_request'
           && github.event.workflow_run.conclusion == 'success'
       )
 
